[package]
name = "mesh-llm-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Rust SDK facade for Mesh LLM clients and embedded serving"
repository = "https://github.com/Mesh-LLM/mesh-llm"
homepage = "https://github.com/Mesh-LLM/mesh-llm"
readme = "README.md"
keywords = ["llm", "mesh", "sdk", "inference"]
categories = ["api-bindings", "network-programming"]

[features]
default = ["client"]
client = ["dep:mesh-llm-api-client"]
console = ["dep:mesh-llm-console-server", "mesh-llm-embedded-runtime?/web-ui"]
node = ["client", "dep:mesh-llm-api-server"]
serving = [
    "node",
    "dep:anyhow",
    "dep:mesh-llm-embedded-runtime",
    "dep:mesh-llm-runtime-install",
    "mesh-llm-embedded-runtime/dynamic-native-runtime",
    "dep:reqwest",
    "dep:serde",
    "dep:serde_json",
]

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true, optional = true }
mesh-llm-api-client = { path = "../mesh-llm-api-client", version = "0.72.1", optional = true }
mesh-llm-api-server = { path = "../mesh-llm-api-server", version = "0.72.1", optional = true }
mesh-llm-console-server = { path = "../mesh-llm-console-server", version = "0.72.1", optional = true }
mesh-llm-embedded-runtime = { path = "../mesh-llm-embedded-runtime", version = "0.72.1", optional = true }
mesh-llm-runtime-install = { path = "../mesh-llm-runtime-install", version = "0.72.1", optional = true }
reqwest = { version = "0.12", features = ["json"], optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
