[package]
name = "mesh-llm-skills"
edition.workspace = true
license.workspace = true
version.workspace = true
description = "Agent skill data model and installer primitives for Mesh LLM"
repository = "https://github.com/Mesh-LLM/mesh-llm"
homepage = "https://github.com/Mesh-LLM/mesh-llm"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
dirs = "6"
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile = "3"
