[package]
name = "mesh-llm-tui"
edition.workspace = true
license.workspace = true
version.workspace = true
description = "Terminal UI and progress output surface for mesh-llm"
repository = "https://github.com/Mesh-LLM/mesh-llm"
homepage = "https://github.com/Mesh-LLM/mesh-llm"
readme = "README.md"
keywords = ["llm", "mesh", "tui"]
categories = ["command-line-interface"]

[lints]
workspace = true

[dependencies]
ansi-to-tui = "8"
anyhow.workspace = true
arboard = "3"
chrono = { version = "0.4", features = ["serde"] }
crossterm = "0.28"
mesh-llm-events = { path = "../mesh-llm-events", version = "0.72.1" }
ratatui = "0.30"
serde_json.workspace = true
tokio = { version = "1", features = ["macros", "rt", "sync", "time"] }
tracing = "0.1"
