[package]
name = "mesh-llm"
version.workspace = true
edition = "2024"

[features]
default = ["web-ui"]
# Embed the React web console into the binary. Default on so the shipped
# binary keeps shipping the console; turn off (`--no-default-features`)
# for a lean variant that drops the embedded UI assets.
web-ui = ["mesh-llm-host-runtime/web-ui"]
gpu-bench-cuda = ["mesh-llm-host-runtime/gpu-bench-cuda"]
gpu-bench-hip = ["mesh-llm-host-runtime/gpu-bench-hip"]
gpu-bench-intel = ["mesh-llm-host-runtime/gpu-bench-intel"]
dynamic-native-runtime = ["mesh-llm-host-runtime/dynamic-native-runtime"]

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
chrono = { version = "0.4", features = ["serde"] }
clap.workspace = true
mesh-llm-cli = { path = "../mesh-llm-cli", version = "0.72.1" }
mesh-llm-commands = { path = "../mesh-llm-commands", version = "0.72.1" }
mesh-llm-host-runtime = { path = "../mesh-llm-host-runtime", version = "0.72.1", default-features = false }
mesh-llm-plugin = { path = "../mesh-llm-plugin", version = "0.72.1" }
mesh-llm-plugin-manager = { path = "../mesh-llm-plugin-manager", version = "0.72.1" }
mesh-llm-system = { path = "../mesh-llm-system", version = "0.72.1", features = ["skippy-devices"] }
mesh-llm-tui = { path = "../mesh-llm-tui", version = "0.72.1" }
reqwest = { version = "0.12", features = ["json"] }
serde.workspace = true
serde_json.workspace = true
tabwriter = "1"
tokio = { version = "1", features = ["full"] }
urlencoding = "2"

[dev-dependencies]
axum = "0.8"
hex = "0.4"
reqwest = { version = "0.12", features = ["json"] }
serial_test = "3"
mesh-client = { package = "mesh-llm-client", path = "../mesh-client" }
serde_json = "1"
tempfile = "3"
