[package]
name = "mesh-mixture-of-agents"
version = "0.70.0"
edition = "2024"
description = "Mixture-of-Agents — fan out to heterogeneous LLMs, arbitrate, return one response"

[dependencies]
async-trait = "0.1"
mesh-llm-guardrails = { path = "../mesh-llm-guardrails" }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
