[package]
name = "mesh-mixture-of-agents"
version.workspace = true
edition = "2024"
description = "Mixture-of-Agents — fan out to heterogeneous LLMs, arbitrate, return one response"
license.workspace = true
repository = "https://github.com/Mesh-LLM/mesh-llm"
homepage = "https://github.com/Mesh-LLM/mesh-llm"
readme = "README.md"

[dependencies]
async-trait = "0.1"
mesh-llm-guardrails = { path = "../mesh-llm-guardrails", version = "0.72.1"  }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
